--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,739 +1,18 @@
-@import "variables";
-
-@keyframes aparicion {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@mixin text($color, $size, $family){
-    color: $color;
-    font-size: $size;
-    font-family: $family;
-}
-
 * {
     margin: 0px;
     padding: 0px;
 }
 
-/*ESTILO GENERAL*/
-
-body {
-    background-color: $darkBackground;
-}
-
-header {
-    background-color: $darkBackground;
-    border-bottom: 1px $darkOrange solid;
-    width: 100%;
-    position: fixed;
-    top: 0px;
-    height: auto;
-    padding-bottom: 0px;
-    z-index: 100;
-
-    .navbar-brand {
-        font-family: 'Oswald', sans-serif;
-    }
-
-    #navbarNav {
-        width: 100%;
-        justify-content: flex-end;
-
-        a{
-            font-family: 'Oswald', sans-serif;
-            animation-name: aparicion;
-            animation-duration: 2s;
-        }
-    }
-
-}
-
-main {
-    background-color: $darkBackground;
-    margin-top: 50px;
-}
-
-.footer {
-    background-color: $darkBackground;
-    width: 100%;
-    max-height: 8%;
-    display: flex;
-    position: relative;
-    bottom: 0px;
-    border-top: $darkOrange 1px solid;
-
-    &__list {
-        display: flex;
-        justify-content: space-evenly;
-        width: 40%;
-        list-style-type: none;
-        align-self: center;
-        margin-bottom: 0px;
-    }
-
-    &__disclaimer {
-        color: beige;
-        font-size: 0.5em;
-        text-align: left;
-        font-family: 'Oswald', sans-serif;
-        padding: 10px 10px 0px 10px;
-        width: 60%;
-        align-self: center;
-    }
-
-    &__link {
-        text-decoration: none;
-        color: beige;
-        font-size: 1.2em;
-    }
-}
-
-/*ESTILO INDEX*/
-
-#mainContent {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-bottom: 100px;
-    flex-direction: column-reverse;
-
-    .textoInicial {
-        @include text($lightOrange, 1em, 'Architects Daughter');
-        text-align: center;
-        font-weight: bold;
-        display: inline-block;
-        width: 100%;
-        animation-name: aparicion;
-        animation-duration: 2s;
-    }
-    
-    .carousel {
-        height: 300px;
-        width: 100%;
-        animation-name: aparicion;
-        animation-duration: 2s;
-        
-
-        .d-block {
-            border-radius: 500px;
-        }
-    }
-}
-
-#tituloPrincipal {
-    color: $darkOrange;
-    text-align: center;
-    font-family: 'Permanent Marker', cursive;
-    padding-top: 20px;
-}
-
-.logo {
-    width: 100%;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-
-    &__imagen {
-        height: 88.5px;
-        width: 250px;
-    }
-}
-
-/*ESTILO GALERIA*/
-
-.productos {
-    display: grid;
-    grid-template-areas: "navProd headProd"
-                         "navProd headGuitar"
-                         "navProd imgGuitar"
-                         "navProd textGuitar"
-                         "navProd headBass"
-                         "navProd imgBass"
-                         "navProd textBass"
-                         "navProd headDrums"
-                         "navProd imgDrums"
-                         "navProd textDrums"
-                         "navProd headAmps"
-                         "navProd imgAmps"
-                         "navProd textAmps";
-    grid-template-rows: repeat(10, 0.2fr);
-    grid-template-columns: 1fr 12fr;
-
-    &__nav {
-        grid-area: navProd;
-        background-image: linear-gradient(to right, $lightOrange, $darkBackground);
-        margin-top: 0px;
-        height: 100%;
-        display: none;
-
-        ul {
-            height: 50%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            padding-left: 0px;
-            display: none;
-
-            li {
-                padding: 0px;
-                list-style-type: none;
-                display: none;
-
-                .productos__opciones {
-                    text-decoration: none;
-                    font-family: 'Oswald', sans-serif;
-                    color: beige;
-                    font-size: 	0.5em;
-                    display: none
-                }
-            }
-        }
-    }
-    
-    &__titulo {
-        @extend #tituloPrincipal;
-        grid-area: headProd;
-    }
-    
-    &__guitarra__titulo {
-        grid-area: headGuitar;
-        color: $lightOrange;
-        font-family: 'Architects Daughter', cursive;
-        padding-left: 15px;
-    }
-
-    &__guitarra__imagen {
-        grid-area: imgGuitar;
-        display: flex;
-        justify-content: space-around;
-
-        #guitarOne {
-            height: 5em;
-            width: 2.5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-        #guitarTwo{
-            height: 5em;
-            width: 2em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-        #guitarThree {
-            height: 5em;
-            width: 2.5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-            
-        }
-        
-        
-    }
-
-    &__guitarra__texto {
-        grid-area: textGuitar;
-        display: flex;
-        justify-content: space-around;
-
-        .productos__guitarra__nombre {
-            @include text(#dddddd, 0.5em, $mainFont)
-        }
-    }
-    
-    &__bajo__titulo {
-        grid-area: headBass;
-        color: $lightOrange;
-        font-family: 'Architects Daughter', cursive;
-        padding-left: 15px;
-    }
-    
-    &__bajo__imagen {
-        grid-area: imgBass;
-        display: flex;
-        justify-content: space-around;
-
-        #bassOne {
-            height: 5em;
-            width: 2.5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-            
-        }
-        
-        
-        #bassTwo {
-            height: 5em;
-            width: 2em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-        #bassThree {
-            height: 5em;
-            width: 2em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-    }
-
-    &__bajo__texto {
-        grid-area: textBass;
-        display: flex;
-        justify-content: space-around;
-
-        .productos__bajo__nombre {
-            @include text(#dddddd, 0.5em, $mainFont)
-        }
-    }
-    
-    &__bateria__titulo {
-        grid-area: headDrums;
-        color: $lightOrange;
-        font-family: 'Architects Daughter', cursive;
-        padding-left: 15px;
-    }
-
-    &__bateria__imagen {
-        grid-area: imgDrums;
-        display: flex;
-        justify-content: space-around;
-
-        #drumsOne {
-            height: 5em;
-            width: 5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-        
-        #drumsTwo {
-            height: 5em;
-            width: 5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-        
-        #drumsThree {
-            height: 5em;
-            width: 5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-    }
-
-    &__bateria__texto {
-        grid-area: textDrums;
-        display: flex;
-        justify-content: space-around;
-
-        .productos__bateria__nombre {
-            @include text(#dddddd, 0.5em, $mainFont)
-        }
-    }
-    
-    &__amp__titulo {
-        grid-area: headAmps;
-        color: $lightOrange;
-        font-family: 'Architects Daughter', cursive;
-        padding-left: 15px;
-    }
-    
-    &__amp__imagen {
-        grid-area: imgAmps;
-        display: flex;
-        justify-content: space-around;
-
-        #ampOne {
-            height: 5em;
-            width: 5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-        
-        #ampTwo {
-            height: 5em;
-            width: 5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-        
-        #ampThree {
-            height: 5em;
-            width: 5em;
-            transition: 0.5s;
-
-            &:hover {
-                transform: scale(1.2, 1.2);
-                background-image: linear-gradient(to bottom, #dddddd, $darkBackground);
-            }
-        }
-        
-        
-        
-    }
-
-    &__amp__texto {
-        grid-area: textAmps;
-        display: flex;
-        justify-content: space-around;
-
-        .productos__amp__nombre {
-            @include text(#dddddd, 0.5em, $mainFont)
-        }
-    }
-}
-
-/*ESTILO HISTORIAS*/
-
-#tituloHistorias {
-    @extend #tituloPrincipal
-}
-
-.historias {
-    &__subtitulo{
-        color: $lightOrange;
-        text-align: center;
-        font-family: Permanent Marker, cursive;
-    }
-
-    &__parrafo{
-        @include text(beige, 1em, $mainFont);
-        text-align: justify;
-        padding: 1em;
-    }
-
-    &__container {
-        width: 100%;
-        justify-content: center;
-        display: flex;
-        margin-bottom: 2em;
-    }
-
-    &__imagen {
-        width: 400px;
-        height: 250px;
-        border: $lightOrange 1px solid;
-    }
-}
-
-
-/*ESTILO SOBRE NOSOTROS*/
-
-.sobreNosotros {
-    &__titulo {
-        @extend #tituloPrincipal
-    }
-
-    &__texto {
-        @include text($lightOrange, 15px, $mainFont);
-        padding: 0.5em;
-
-        .sobreNosotros__link {
-            font-size: 15px;
-            color: $lightOrange;
-            font-family: 'Architects Daughter', cursive;
-            text-decoration: none;
-
-            &:hover {
-                color: $lightOrange;
-            } 
-        }
-    }
-}
-
-.pictures {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-
-    &__images {
-        height: 200px;
-        width: 100%;
-        border: 1px $lightOrange solid;
-    }
-}
-
-/*ESTILO CONTACTOS*/
-
-#tituloContactos {
-    @extend #tituloPrincipal
-}
-
-form {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 10em;
-
-    fieldset {
-        flex-direction: column;
-        width: 100%;
-        padding: 2em;
-
-        .input-group {
-            width: 100%;
-        }
-
-        .btn {
-            margin: 1em;
-        }
-
-        .primaryButton {
-            padding: 1em 2em 1em 2em;
-            background-color: $darkOrange;
-            color: #dddddd;
-            border-radius: 4px;
-            margin-left: 1em;
-        }
-
-        .form-check-label {
-            color: $lightOrange;
-        }
-    }
-}
-
-iframe {
-    width: 100%;
-    padding: 0em 5em;
-}
-
-
-
-
-@media screen  and (min-width:600px) {
-
-    .footer {
-        &__disclaimer {
-            font-size: 1em;
-        }
-
-        &__link {
-            font-size: 3em;
-        }
-    }
-
-    #mainContent {
-        flex-direction: row;
-
-        .textoInicial {
-            font-size: 1.5em;
-            width: 30%;
-            text-align: right;
-        }
-
-        .carousel {
-            width: 500px;
-        }
-    }
-
-    .logo {
-        &__imagen {
-            height: 177px;
-            width: 500px;
-        }
-    }
-
-    .productos {
-        &__nav {
-            display: flex;
-            ul {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
-                li {
-                    display: block;
-                    .productos__opciones {
-                        font-size: 1em;
-                        display: inline-block;
-                    }
-                }
-            }
-        }
-        &__guitarra__imagen {
-            #guitarOne {
-                height: 10em;
-                width: 5em;
-            }
-            #guitarTwo {
-                height: 10em;
-                width: 4em;
-            }
-            #guitarThree {
-                height: 10em;
-                width: 5em;
-            }
-
-        }
-
-        &__guitarra__texto {
-            .productos__guitarra__nombre {
-                @include text(#dddddd, 1em, $mainFont)
-            }
-        }
-
-        &__bajo__imagen {
-            #bassOne {
-                height: 10rem;
-                width: 5rem;
-            }
-
-            #bassTwo {
-                height: 10rem;
-                width: 4rem;
-            }
-
-            #bassThree {
-                height: 10rem;
-                width: 4rem;
-            }
-        }
-
-        &__bajo__texto {
-            .productos__bajo__nombre {
-                @include text(#dddddd, 1em, $mainFont)
-            }
-        }
-
-        &__bateria__imagen{
-            #drumsOne {
-                height: 10rem;
-                width: 10rem;
-            }
-            #drumsTwo {
-                height: 10rem;
-                width: 10rem;
-            }
-            #drumsThree {
-                height: 10rem;
-                width: 10rem;
-            }
-        }
-
-        &__bateria__texto {
-            .productos__bateria__nombre {
-                @include text(#dddddd, 1em, $mainFont)
-            }
-        }
-
-        &__amp__imagen {
-            #ampOne {
-                height: 10rem;
-                width: 10rem;
-            }
-            #ampTwo {
-                height: 10rem;
-                width: 10rem;
-            }
-            #ampThree {
-                height: 10rem;
-                width: 10rem;
-            }
-        }
-
-        &__amp__texto {
-            .productos__amp__nombre {
-                @include text(#dddddd, 1em, $mainFont)
-            }
-        }
-    }
-    .pictures {
-        display: flex;
-
-        &__images {
-            width: 25%;
-            padding: 1em;
-        }
-    }
-
-    .historias {
-        &__imagen {
-            width: 500px;
-            height: 300px;
-        }
-    }
-
-    .sobreNosotros {
-        &__texto {
-            @include text($lightOrange, 30px, $mainFont);
-            animation-name: aparicion;
-            animation-duration: 2s;
-            .sobreNosotros__link {
-                font-size: 30px;
-                animation-name: aparicion;
-                animation-duration: 2s;
-            }
-        }
-    }
-
-    form {
-        fieldset {
-            width: 50%;
-        }
-    }
-}
+@import "variables";
+
+@import "__animaciones.scss";
+
+@import "__mixin.scss";
+
+@import "__general.scss";
+@import "__principal.scss";
+@import "__galeria.scss";
+@import "__historias.scss";
+@import "__sobreNosotros.scss";
+@import "__contacto.scss";
+@import"__mediaQueries.scss";
